Wrote css and floated some html elements

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Sangwa Reads</title>
 	<link rel="icon" href="img2/readingicon.jpeg">
+	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
+	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- header element -->
@@ -16,48 +18,73 @@
 		<p> Sangwani Simwaka or just "Sangwa" is a 3rd year Biochemistry student that's learning to code and reads books.</p>
 		<!-- Currently reading -->
 		<h2>Currently Reading</h2>
-			<img src="img2/kings.jpeg">
-			<p>
-				A Clash of Kings
-			</p>
-			<img src="img2/afuck.jpeg">
-			<p>The Subtle Art of Not Giving a F*ck</p>
+		<div id="boxes">	
+			<div id="leftbox">
+				<img src="img2/kings.jpeg">
+				<p>
+					A Clash of Kings
+				</p>
+			</div>
+			<div id="rightbox">
+				<img src="img2/afuck.jpeg">
+				<p>The Subtle Art of Not Giving a F*ck</p>
+			</div>	
+		</div>
+
 		<!-- Top Picks -->
-		<h2>Sangwa's Top Picks</h2>
-			<img src="img2/agameofthrones.jpeg">
-			<p>A Game of Thrones</p>
-			<img src="img2/julieandme.jpeg">
-			<p>Julie, Me and Michael Owen Makes Three</p>
-			<img src="img2/wallflower.jpeg">
-			<p>The Perks of Being a Wallflower</p>
-			<img src="img2/bbm.jpeg">
-			<p>Becoming Bindy Mackenzie</p>
-			<img src="img2/killingjoke.jpeg">
-			<p>The Killing Joke</p>
+		<br>
+		<div id="boxes">
+			<div id="leftbox">
+			<h2>Sangwa's Top Picks</h2>
+				<img src="img2/agameofthrones.jpeg">
+				<p>A Game of Thrones</p>
+			</div>
+			<div id="rightbox">
+				<img src="img2/julieandme.jpeg">
+				<p>Julie, Me and Michael Owen Makes Three</p>
+			</div>
+			<div id="rightbox">
+				<img src="img2/wallflower.jpeg">
+				<p>The Perks of Being a Wallflower</p>
+			</div>
+			<div id="leftbox">
+				<img src="img2/bbm.jpeg">
+				<p>Becoming Bindy Mackenzie</p>
+			</div>
+			<div id="leftbox">
+				<img src="img2/killingjoke.jpeg">
+				<p>The Killing Joke</p>
+			</div>
+		</div>
 		<!-- Other Books I've Read -->
-		<h2>Other Books Sangwa Has Read</h2>
-		<ul>
-			<li><a href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
-			<li><a href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
-			<li><a href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
-			<li><a href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
-			<li><a href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Book Comic Series</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
-			<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
-		</ul>
+		<br>
+		<div id="boxes">
+			<div id="rightbox">
+			<h2 class="other">Other Books Sangwa Has Read</h2>
+			<ul>
+				<li><a href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
+				<li><a href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
+				<li><a href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
+				<li><a href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
+				<li><a href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Book Comic Series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
+			</ul>
+		</div>
+	</div>
 	</main>
 
 </body>
