Added links, changed font, added book and footer

--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
 	<title>Sangwa Reads</title>
 	<link rel="icon" href="img2/readingicon.jpeg">
 	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
-	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
 <body>
 	<!-- header element -->
 	<header>
 		<img src="img2/sangwa-img.jpeg">
 		<h1>Sangwa</h1>
+	
 	</header>
 	<!-- main element -->
 	<main>
+		<div class="row">
+			<div class="col"><a class="top" href="https://www.instagram.com/sangwa_/" target="_blank">Instagram</a></div>
+			<div class="col"><a class= "top" href="https://twitter.com/RealSlimSangwa" target="_blank">Twitter</a></div>
+			<div class="col"><a class="top" href="https://realslimsangwa.github.io/cartoon-hero/" target="_blank">First Website</a></div>
+			<div class="col"><a class= "top" href="https://www.skillshare.com/home" target="_blank">Skillshare</a></div>
+		</div>
+		<br>
 		<h2>About Sangwa</h2>
 		<p> Sangwani Simwaka or just "Sangwa" is a 3rd year Biochemistry student that's learning to code and reads books.</p>
 		<!-- Currently reading -->
-		<h2>Currently Reading</h2>
+		<h2>Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
 				<img src="img2/kings.jpeg">
@@ -35,7 +43,7 @@
 		<br>
 		<div id="boxes">
 			<div id="leftbox">
-			<h2>Sangwa's Top Picks</h2>
+			<h2>Sangwa's Top Picks:</h2>
 				<img src="img2/agameofthrones.jpeg">
 				<p>A Game of Thrones</p>
 			</div>
@@ -55,11 +63,13 @@
 				<img src="img2/killingjoke.jpeg">
 				<p>The Killing Joke</p>
 			</div>
+			<div id ="rightbox">
+				<img src="img2/gods.jpeg">
+				<p>The Mansions of Gods</p>
+			</div>
 		</div>
 		<!-- Other Books I've Read -->
 		<br>
-		<div id="boxes">
-			<div id="rightbox">
 			<h2 class="other">Other Books Sangwa Has Read</h2>
 			<ul>
 				<li><a href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
@@ -83,9 +93,12 @@
 				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
 			</ul>
-		</div>
-	</div>
 	</main>
-
+	<!-- Footer element -->
+	<footer>
+		<p>
+			This site was created as a place for me to learn html, css and javascript. &copy; Sangwani Simwaka
+		</p>
+	</footer>
 </body>
 </html>
