White text in footer, background, tag

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<link rel="icon" href="img2/readingicon.jpeg">
 	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
 </head>
 <body>
+	<!-- RealSlimSangwa -->
 	<!-- header element -->
 	<header>
 		<img src="img2/sangwa-img.jpeg">
@@ -96,7 +98,7 @@
 	</main>
 	<!-- Footer element -->
 	<footer>
-		<p>
+		<p class="footer">
 			This site was created as a place for me to learn html, css and javascript. &copy; Sangwani Simwaka
 		</p>
 	</footer>
