circle img, transformed stuf, h2 font increase

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
 			<div class="col"><a class= "top" href="https://www.skillshare.com/home" target="_blank">Skillshare</a></div>
 		</div>
 		<br>
-		<h2>About Sangwa</h2>
-		<p> Sangwani Simwaka or just "Sangwa" is a 3rd year Biochemistry student that's learning to code and reads books.</p>
+		<h2 class="about">About Sangwa</h2>
+		<p class="aboutcap"> Sangwani Simwaka or just "Sangwa" is a 3rd year Biochemistry student that's learning to code and reads books.</p>
 		<!-- Currently reading -->
-		<h2>Currently Reading:</h2>
+		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
 				<img src="img2/kings.jpeg">
-				<p>
+				<p class="clashcap">
 					A Clash of Kings
 				</p>
 			</div>
 			<div id="rightbox">
 				<img src="img2/afuck.jpeg">
-				<p>The Subtle Art of Not Giving a F*ck</p>
+				<p class="fuckcap">The Subtle Art of Not Giving a F*ck</p>
 			</div>	
 		</div>
 
@@ -45,29 +45,29 @@
 		<br>
 		<div id="boxes">
 			<div id="leftbox">
-			<h2>Sangwa's Top Picks:</h2>
+			<h2 class="toppicks">Sangwa's Top Picks:</h2>
 				<img src="img2/agameofthrones.jpeg">
-				<p>A Game of Thrones</p>
+				<p class="gamecap">A Game of Thrones</p>
 			</div>
 			<div id="rightbox">
-				<img src="img2/julieandme.jpeg">
-				<p>Julie, Me and Michael Owen Makes Three</p>
+				<img class="julieimg" src="img2/julieandme.jpeg">
+				<p class="juliecap">Julie, Me and Michael Owen Makes Three</p>
 			</div>
 			<div id="rightbox">
 				<img src="img2/wallflower.jpeg">
-				<p>The Perks of Being a Wallflower</p>
+				<p class="wallflowercap">The Perks of Being a Wallflower</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/bbm.jpeg">
-				<p>Becoming Bindy Mackenzie</p>
+				<p class="bindycap">Becoming Bindy Mackenzie</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/killingjoke.jpeg">
-				<p>The Killing Joke</p>
+				<p class="jokecap">The Killing Joke</p>
 			</div>
 			<div id ="rightbox">
 				<img src="img2/gods.jpeg">
-				<p>The Mansions of Gods</p>
+				<p class="godscap">The Mansions of Gods</p>
 			</div>
 		</div>
 		<!-- Other Books I've Read -->
