changed books, other small changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- RealSlimSangwa -->
 	<!-- header element -->
 	<header>
-		<img src="img2/sangwa-img.jpeg">
+		<img src="img2/pp.jpeg">
 		<h1>Sangwa</h1>
 	
 	</header>
@@ -30,9 +30,9 @@
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
-				<img src="img2/kings.jpeg">
+				<img src="img2/astormofswords.jpeg">
 				<p class="clashcap">
-					A Clash of Kings
+					A Storm of Swords
 				</p>
 			</div>
 			<div id="rightbox">
@@ -66,8 +66,8 @@
 				<p class="jokecap">The Killing Joke</p>
 			</div>
 			<div id ="rightbox">
-				<img src="img2/gods.jpeg">
-				<p class="godscap">The Mansions of Gods</p>
+				<img src="img2/kings.jpeg">
+				<p class="godscap">A Clash of Kings</p>
 			</div>
 		</div>
 		<!-- Other Books I've Read -->
@@ -85,7 +85,7 @@
 				<li><a href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
 				<li><a href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Book Comic Series</a></li>
+				<li><a href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book Series</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
