The alchemist and colour changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- RealSlimSangwa -->
 	<!-- header element -->
 	<header>
-		<img src="img2/pp.jpeg">
+		<img src="img2/newdp.jpeg">
 		<h1>Sangwa</h1>
 	
 	</header>
@@ -25,19 +25,19 @@
 		</div>
 		<br>
 		<h2 class="about">About Sangwa</h2>
-		<p class="aboutcap"> Sangwani Simwaka or just "Sangwa" is a 3rd year Biochemistry student that's learning to code and reads books.</p>
+		<p class="aboutcap"> Sangwani Simwaka or just "Sangwa" is a 4th year Biochemistry student that's learning to code and reads books.</p>
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
 				<img src="img2/astormofswords.jpeg">
-				<p class="clashcap">
+				<p class="leftbookcap">
 					A Storm of Swords
 				</p>
 			</div>
 			<div id="rightbox">
-				<img src="img2/afuck.jpeg">
-				<p class="fuckcap">The Subtle Art of Not Giving a F*ck</p>
+				<img src="img2/thealchemist.jpeg">
+				<p class="rightbookcap">The Alchemist</p>
 			</div>	
 		</div>
 
@@ -74,6 +74,7 @@
 		<br>
 			<h2 class="other">Other Books Sangwa Has Read</h2>
 			<ul>
+				<li><a href="https://en.wikipedia.org/wiki/The_Subtle_Art_of_Not_Giving_a_Fuck" target="_blank">The Subtle Art of Not Giving a F*ck</a></li>
 				<li><a href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
 				<li><a href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
