Added more top picks and feast for crows

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
-				<img src="img2/astormofswords.jpeg">
+				<img src="img2/crows.jpeg">
 				<p class="leftbookcap">
-					A Storm of Swords
+					A Feast For Crows
 				</p>
 			</div>
 			<div id="rightbox">
@@ -67,7 +67,15 @@
 			</div>
 			<div id ="rightbox">
 				<img src="img2/kings.jpeg">
-				<p class="godscap">A Clash of Kings</p>
+				<p class="clashcap">A Clash of Kings</p>
+			</div>
+			<div id="leftbox">
+				<img src="img2/afuck.jpeg">
+				<p class="afuckcap">The Subtle Art of Not Giving a F*ck</p>
+			</div>
+			<div id ="rightbox">
+				<img src="img2/astormofswords.jpeg">
+				<p class="swordscap">A Storm of Swords</p>
 			</div>
 		</div>
 		<!-- Other Books I've Read -->
