--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
 </head>
 <body>
-	<!-- RealSlimSangwa -->
 	<!-- header element -->
 	<header>
 		<img src="img2/newdp.jpeg">
 		<h1>Sangwa</h1>
-	
 	</header>
 	<!-- main element -->
 	<main>
@@ -82,26 +80,26 @@
 		<br>
 			<h2 class="other">Other Books Sangwa Has Read</h2>
 			<ul>
-				<li><a href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
-				<li><a href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
-				<li><a href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
-				<li><a href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
-				<li><a href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book Series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
-				<li><a href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
+				<li><a class = "a2" href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
+				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
+				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
+				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Avatar:_The_Last_Airbender_%E2%80%93_The_Search" target="_blank">Avatar: The Last Airbender- The Search</a></li>
+				<li><a class = "a2"  href="https://spiderman.fandom.com/wiki/Spider-Man_Noir_(Volume_1)_2" target="_blank">Spider-Man: Noir</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Captain_Underpants" target="_blank">Captain Underpants Book Series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Asterix" target="_blank">Asterix Comic Book Series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
 			</ul>
 	</main>
 	<!-- Footer element -->
