Contact info test

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="col"><a class="top" href="https://www.instagram.com/sangwa_/" target="_blank">Instagram</a></div>
 			<div class="col"><a class= "top" href="https://twitter.com/RealSlimSangwa" target="_blank">Twitter</a></div>
 			<div class="col"><a class="top" href="https://realslimsangwa.github.io/cartoon-hero/" target="_blank">First Website</a></div>
-			<div class="col"><a class= "top" href="https://www.skillshare.com/home" target="_blank">Skillshare</a></div>
+			<div class= "col"><a class = "top" href = "contact.html"> Contact Info</a></div>
 		</div>
 		<br>
 		<h2 class="about">About Sangwa</h2>
