Reviews, contacts page, quotes page, 1st person change
A whole lot of changes

--- a/index.html
+++ b/index.html
@@ -18,73 +18,91 @@
 		<div class="row">
 			<div class="col"><a class="top" href="https://www.instagram.com/sangwa_/" target="_blank">Instagram</a></div>
 			<div class="col"><a class= "top" href="https://twitter.com/RealSlimSangwa" target="_blank">Twitter</a></div>
-			<div class="col"><a class="top" href="https://realslimsangwa.github.io/cartoon-hero/" target="_blank">First Website</a></div>
-			<div class= "col"><a class = "top" href = "contact.html"> Contact Info</a></div>
+			<div class="col"><a class="top" href="quotes.html" title="Check out my favourite books quotes">Favourite Book Quotes</a></div>
+			<div class= "col"><a class = "top" href = "contact.html" title="If you wanna get in touch with me for some reason"> Contact Info</a></div>
 		</div>
 		<br>
-		<h2 class="about">About Sangwa</h2>
-		<p class="aboutcap"> Sangwani Simwaka or just "Sangwa" is a 4th year Biochemistry student that's learning to code and reads books.</p>
+		<h2 class="about">About</h2>
+		<p class="aboutcap"> 4th year Biochemistry student that's learning to code and reads books.</p>
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
 			<div id="leftbox">
-				<img src="img2/crows.jpeg">
+				<img src="img2/adance.jpeg">
 				<p class="leftbookcap">
-					A Feast For Crows
+					<em>A Dance with Dragons</em>
 				</p>
 			</div>
 			<div id="rightbox">
-				<img src="img2/thealchemist.jpeg">
-				<p class="rightbookcap">The Alchemist</p>
+				<img src="img2/sapiens.jpeg">
+				<p class="rightbookcap"><em>Sapiens: A Brief History of HumanKind</em></p>
 			</div>	
 		</div>
 
 		<!-- Top Picks -->
 		<br>
-		<div id="boxes">
+
+		<div id="boxes">	
 			<div id="leftbox">
-			<h2 class="toppicks">Sangwa's Top Picks:</h2>
+				<h2 class="toppicks">My Top Picks:</h2>
 				<img src="img2/agameofthrones.jpeg">
-				<p class="gamecap">A Game of Thrones</p>
+				<p class = "gamecap"><em>A Game of Thrones</em></p>
 			</div>
 			<div id="rightbox">
-				<img class="julieimg" src="img2/julieandme.jpeg">
-				<p class="juliecap">Julie, Me and Michael Owen Makes Three</p>
+				<!-- <img class="julieimg" src="img2/julieandme.jpeg">
+				<p class="juliecap">Julie, Me and Michael Owen Makes Three</p> -->
+				<p>If I'm being honest, I would probably include all the books from <em>A Song of Ice and Fire</em> in my Top Picks. But I decided to limit myself to one.<em> A Game of Thrones</em>, by George R. R. Martin, kicks off this epic fantasy series about kings, lords, magic and death. Engaging, witty, and fucking entertaining, Martin has created an immersive fantasy world that keeps the reader invested with every page. Although no character is all good or all bad, you'll find yourself rooting for some and wishing the worst for others. I think it's fair to say that we all have a soft spot for "cripples, bastards and broken things."</p>
+
 			</div>
 			<div id="rightbox">
-				<img src="img2/wallflower.jpeg">
+				<!-- <img src="img2/wallflower.jpeg">
 				<p class="wallflowercap">The Perks of Being a Wallflower</p>
+			-->
+				<p class = "julietext"><em>Julie, Me, and Michael Owen Makes Three</em>, by Alan Gibbons, was one of my favourite books growing up. As a diehard Arsenal fan, I never thought I would find myself rooting for Manchester United. But Gibbons has somehow managed to create a book that even the biggest Manchester United haters would enjoy. The main protagonist, Terry Payne, is a relatable character for any football fan in high school. As he tries to balance his love for the beautiful game and the pressures of high school, he falls hopelessly in love with a girl he has hardly spoken to. We've all been there before, haven't we? As you read the book, you'll find yourself frustrated with Terry, feeling sorry for him, but most of all, empathetic. 
+				</p>
 			</div>
 			<div id="leftbox">
-				<img src="img2/bbm.jpeg">
-				<p class="bindycap">Becoming Bindy Mackenzie</p>
+				<img src="img2/julieandme.jpeg">
+				<p class = "juliecap"><em>Julie, Me, and Michael Owen Makes Three</em></p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/killingjoke.jpeg">
-				<p class="jokecap">The Killing Joke</p>
+				<p class="jokecap"><em>Batman: The Killing Joke</em></p>
 			</div>
 			<div id ="rightbox">
-				<img src="img2/kings.jpeg">
+				<!-- <img src="img2/kings.jpeg">
 				<p class="clashcap">A Clash of Kings</p>
+			-->
+				<p>Picking your favourite comic book is one of the toughest choices you'll ever have to make. <em>Batman: The Killing Joke</em> is my choice. Written by Alan Moore and illustrated by Brian Bolland, this comic tells another story about Batman against the Joker. But it's different this time. This dark short story provides us with a detailed origin story for the Joker and the reasons behind his madness. Moore's gritty tone blends excellently with Bolland's gorgeous art. And the ending is just... perfect.</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/afuck.jpeg">
-				<p class="afuckcap">The Subtle Art of Not Giving a F*ck</p>
+				<p class = "fuckcap"><em>The Subtle Art of Not Giving a Fuck</em></p>
 			</div>
 			<div id ="rightbox">
-				<img src="img2/astormofswords.jpeg">
+				<!-- <img src="img2/astormofswords.jpeg">
 				<p class="swordscap">A Storm of Swords</p>
+			-->
+				<p class = "afucktext" >Who thought that a book that tells you that you're not special could be so inspiring? As someone who prefers fiction and has never had strong feelings towards self-help books, <em>the Subtle Art of Not Giving a Fuck</em> has somehow found its way into my Top Picks. Mark Manson doesn't hold back when he's telling you that you've spent way too long giving a fuck about everything when you should be reserving your fucks for what truly matters. It's actually a lot better than it sounds, and even if you do feel attacked while reading it, you'll be glad you made it to the end. My favourite chapters were: "The Importance of Saying No" and "You Are Not Special." </p>
 			</div>
 		</div>
 		<!-- Other Books I've Read -->
 		<br>
-			<h2 class="other">Other Books Sangwa Has Read</h2>
+			<h2 class="other">Other Books I Have Read:</h2>
 			<ul>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Feast_for_Crows" target="_blank">A Feast for Crows</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Clash_of_Kings" target="_blank">A Clash of Kings</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Storm_of_Swords" target="_blank">A Storm of Swords</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Betrayal_of_Bindy_Mackenzie" target="_blank">Becoming Bindy Mackenzie</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Perks_of_Being_a_Wallflower" target="_blank">The Perks of Being a Wallflower</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/The_Alchemist_(novel)" target="_blank">The Alchemist</a></li>
+				<li><a class = "a2" href="https://en.wikipedia.org/wiki/A_Brief_History_of_Time" target="_blank">A Brief History of Time</a></li>
 				<li><a class = "a2" href="https://starwars.fandom.com/wiki/Ahsoka_(novel)" target="_blank">Ahsoka</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter Book Series</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter and the Cursed Child</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
 				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
@@ -95,11 +113,10 @@
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Adventures_of_Tintin" target="_blank">The Adventures of Tintin Comic Book series</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Finding_Cassie_Crazy" target="_blank">Finding Cassie Crazy</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Feeling_Sorry_for_Celia" target="_blank">Feeling Sorry for Celia</a></li>
+				<li><a class = "a2"  href="https://www.goodreads.com/book/show/7097618-the-ghosts-of-ashbury-high" target="_blank">The Ghosts of Ashbury High</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Big_Nate" target="_blank">Big Nate Book Series</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Diary_of_a_Wimpy_Kid" target="_blank">Diary of a Wimpy Kid Book Series</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/The_Right_Side_of_History" target="_blank">The Right Side of History</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Chamber_of_Secrets" target="_blank">Harry Potter and the Chamber of secrets</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Philosopher%27s_Stone" target="_blank">Harry Potter and the Philosopher's Stone</a></li>
 			</ul>
 	</main>
 	<!-- Footer element -->
