--- a/quotes.html
+++ b/quotes.html
@@ -5,11 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
-</head>
+	<title>Favourite Book Quotes</title>
 </head>
 <body>
-	<p class = contactinfo> Email: sangwa.simwaka@gmail.com </p>
-	<p class = contactinfo> School Email: sas185@usask.ca </p>
-	<p class = contactinfo> Phone: + 1 (204) 899 7580 </p>
+	<p>*Still Working on this page*</p>
 </body>
 </html>
