--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<!-- <img src="img2/kings.jpeg">
 				<p class="clashcap">A Clash of Kings</p>
 			-->
-				<p>Picking your favourite comic book is one of the toughest choices you'll ever have to make. <em>Batman: The Killing Joke</em> is my choice. Written by Alan Moore and illustrated by Brian Bolland, this comic tells another story about Batman against the Joker. But it's different this time. This dark short story provides us with a detailed origin story for the Joker and the reasons behind his madness. Moore's gritty tone blends excellently with Bolland's gorgeous art. And the ending is just... perfect.</p>
+				<p>Picking your favourite comic book is one of the toughest choices you'll ever have to make. <em>Batman: The Killing Joke</em> is my choice. Written by Alan Moore and illustrated by Brian Bolland, this comic book tells another story about Batman against the Joker. But it's different this time. This dark short story provides us with a detailed origin story for the Joker and the reasons behind his madness. Moore's gritty tone blends excellently with Bolland's gorgeous art. And the ending is just... perfect.</p>
 			</div>
 			<div id="leftbox">
 				<img src="img2/afuck.jpeg">
