--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Holes_(novel)" target="_blank">Holes</a></li>
 				<li><a class = "a2" href="https://en.wikipedia.org/wiki/Flashpoint_(comics)" target="_blank">Flashpoint</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Titans:_The_Return_of_Wally_West_(Collected)" target="_blank">Titans: The Return of Wally West</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter Book Series</a></li>
-				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter and the Cursed Child</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter_and_the_Cursed_Child" target="_blank">Harry Potter and the Cursed Child</a></li>
+				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Harry_Potter" target="_blank">Harry Potter Book Series</a></li>
 				<li><a class = "a2"  href="https://dc.fandom.com/wiki/Flash_War" target="_blank">Flash War</a></li>
 				<li><a class = "a2"  href="https://en.wikipedia.org/wiki/Heroes_in_Crisis" target="_blank">Heroes in Crisis</a></li>
 				<li><a class = "a2"  href="https://marvel.fandom.com/wiki/Deadpool_Kills_the_Marvel_Universe_Vol_1_1" target="_blank">Deadpool Kills the Marvel Universe</a></li>
