--- a/quotes.html
+++ b/quotes.html
@@ -1,13 +1,166 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Contact Information </title>
+	<title> Favourite Book Quotes</title>
 	<link rel="stylesheet" type="text/css" href="css/sangwa-reads.css">
 	<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Red+Rose&display=swap" rel="stylesheet">
-	<title>Favourite Book Quotes</title>
 </head>
 <body>
-	<p>*Still Working on this page*</p>
+	<main>
+	<p class= "quotestext">*Still working on this page*</p>
+
+	<p class= "quotestext">“It is our choices, … that show what we truly are, far more than our abilities."
+		<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; J. K. Rowling, <em>Harry Potter and the Chamber of Secrets</em></p>
+
+
+	<p class = "quotestext">
+		“There's nothing like deep breaths after laughing that hard. Nothing in the world like a sore stomach for the right reasons.” <br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em>
+	</p>
+
+
+	<p class = "quotestext">“I have a tender spot in my heart for cripples and bastards and broken things.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Game of Thrones</em>
+	</p>
+
+
+	<p class = "quotestext">“All it takes is one bad day to reduce the sanest man alive to lunacy. That's how far the world is from where I am. Just one bad day.” <br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Alan Moore , <em>Batman: The Killing Joke</em>
+	</p>
+
+
+	<p class = "quotestext">“Maturity is what happens when one learns to only give a fuck about what’s truly fuckworthy.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Mark Manson, <em>The Subtle Art of Not Giving a F*ck</em>
+	</p>
+
+
+	<p class = "quotestext">“You and everyone you know are going to be dead soon. And in the short amount of time between here and there, you have a limited amount of fucks to give. Very few, in fact. And if you go around giving a fuck about everything and everyone without conscious thought or choice—well, then you’re going to get fucked.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Mark Manson, <em>The Subtle Art of Not Giving a F*ck</em>
+	</p>
+
+
+	<p class = "quotestext">“Fear cuts deeper than swords. The man who fears losing has already lost.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Game of Thrones</em>
+	</p>
+
+
+	<p class = "quotestext">“I am very interested and fascinated how everyone loves each other, but no one really likes each other.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em> 
+	</p>
+
+
+	<p class = "quotestext">“The women are the strong ones, truly.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Feast for Crows</em>
+	</p>
+
+
+	<p class = "quotestext">“When you play the game of thrones you win or you die.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Game of Thrones</em>
+	</p>
+
+
+	<p class = "quotestext">“My old grandmother always used to say, Summer friends will melt away like summer snows, but winter friends are friends forever.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Feast for Crows</em>
+	</p>
+
+
+	<p class = "quotestext">“Old stories are like old friends, ... You have to visit them from time to time.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Storm of Swords</em>
+	</p>
+
+
+	<p class = "quotestext">“All these kings would do a deal better if they would put down their swords and listen to their mothers.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Storm of Swords</em>
+	</p>
+
+
+	<p class = "quotestext">Mormont speaking to Jon Snow) “A lord’s one thing, a king’s another. They will garb your brother Robb in silks, satins, and velvets of a hundred different colors, while you live and die in black ringmail. He will wed some beautiful princess and father sons on her. You’ll have no wife, nor will you ever hold a child of your own blood in your arms. Robb will rule, you will serve. Men will call you a crow. Him they’ll call `Your Grace’. Singers will praise every little thing he does, while your greatest deeds all go unsung. Tell me that none of this troubles you, Jon… and I’ll name you a liar, and know I have the truth of it.”
+	<br> 
+	Jon drew himself up, taut as a bowstring “And if it did trouble me, what might I do, bastard as I am?”
+	<br>
+	“What will you do?” Mormont asked. “Bastard as you are.”
+	<br>
+	“Be troubled,” said Jon, “and keep my vows.”
+	<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Clash of Kings</em>
+	</p>
+
+
+	<p class = "quotestext">“Sometimes I think everyone is just pretending to be brave, and none of us really are. Maybe pretending is how you get brave, I don't know.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Storm of Swords</em>
+	</p>
+
+
+	<p class = "quotestext">“Valar morghulis.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Clash of Kings</em>
+	</p>
+
+
+	<p class = "quotestext">“We accept the love we think we deserve.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em>
+	</p>
+
+
+	<p class = "quotestext">“So, I guess we are who we are for a lot of reasons. And maybe we'll never know most of them. But even if we don't have the power to choose where we come from, we can still choose where we go from there. We can still do things. And we can try to feel okay about them.” <br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em>
+	</p>
+
+
+	<p class = "quotestext">“Enjoy it. Because it's happening.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em>
+	</p>
+
+	
+	<p class = "quotestext">“We didn't talk about anything heavy or light. We were just there together. And that was enough.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Chbosky, <em>The Perks of Being a Wallflower</em>
+	</p>
+
+
+	<p class = "quotestext">“The universe doesn't allow perfection.” <br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Stephen Hawking, <em>A Brief History of Time</em>
+	</p>
+
+
+	<p class = "quotestext">“It's the possibility of having a dream come true that makes life interesting.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coelho, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“When we love, we always strive to become better than we are. When we strive to become better than we are, everything around us becomes better too.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coelho, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“The secret of life, though, is to fall seven times and to get up eight times.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coelho, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“The simple things are also the most extraordinary things, and only the wise can see them.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coelho, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“If someone isn't what others want them to be, the others become angry. Everyone seems to have a clear idea of how other people should lead their lives, but none about his or her own.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coelho, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“Your eyes show the strength of your soul.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Paulo Coehlo, <em>The Alchemist</em>
+	</p>
+
+
+	<p class = "quotestext">“What does it mean?" Emily said, in a low, panicked voice: "What does it mean if a rainbow comes before rain?”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Jaclyn Moriarty, <em>The Murder of Bindy Mackenzie</em>
+	</p>
+
+
+	<p class = "quotestext">“When you spend your whole life living in a hole, the only way you can go is up.”<br>
+	&nbsp; &nbsp; &nbsp; - &nbsp; Louis Sachar, <em>Holes</em>
+	</p>
+</main>
 </body>
 </html>
