--- a/quotes.html
+++ b/quotes.html
@@ -76,7 +76,7 @@
 	</p>
 
 
-	<p class = "quotestext">Mormont speaking to Jon Snow) “A lord’s one thing, a king’s another. They will garb your brother Robb in silks, satins, and velvets of a hundred different colors, while you live and die in black ringmail. He will wed some beautiful princess and father sons on her. You’ll have no wife, nor will you ever hold a child of your own blood in your arms. Robb will rule, you will serve. Men will call you a crow. Him they’ll call `Your Grace’. Singers will praise every little thing he does, while your greatest deeds all go unsung. Tell me that none of this troubles you, Jon… and I’ll name you a liar, and know I have the truth of it.”
+	<p class = "quotestext">(Mormont speaking to Jon Snow) “A lord’s one thing, a king’s another. They will garb your brother Robb in silks, satins, and velvets of a hundred different colors, while you live and die in black ringmail. He will wed some beautiful princess and father sons on her. You’ll have no wife, nor will you ever hold a child of your own blood in your arms. Robb will rule, you will serve. Men will call you a crow. Him they’ll call `Your Grace’. Singers will praise every little thing he does, while your greatest deeds all go unsung. Tell me that none of this troubles you, Jon… and I’ll name you a liar, and know I have the truth of it.”
 	<br> 
 	Jon drew himself up, taut as a bowstring “And if it did trouble me, what might I do, bastard as I am?”
 	<br>
