--- a/quotes.html
+++ b/quotes.html
@@ -21,7 +21,7 @@
 	</p>
 
 
-	<p class = "quotestext">“I have a tender spot in my heart for cripples and bastards and broken things.”<br>
+	<p class = "quotestext">“I have a tender spot in my heart for cripples, bastards and broken things.”<br>
 	&nbsp; &nbsp; &nbsp; - &nbsp; George R.R. Martin, <em>A Game of Thrones</em>
 	</p>
 
