--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			<div class= "col"><a class = "top" href = "contact.html" title="If you wanna get in touch with me for some reason"> Contact Info</a></div>
 		</div>
 		<br>
-		<h2 class="about">About</h2>
-		<p class="aboutcap"> 4th year Biochemistry student that's learning to code and reads books.</p>
+		<h2 class="about">What is this website for?</h2>
+		<p class="aboutcap">This website is a space for me to practice my coding and share my love of books.</p>
 		<!-- Currently reading -->
 		<h2 class="currently">Currently Reading:</h2>
 		<div id="boxes">	
