--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 </head>
 <body>
-	<p class = contactinfo> Email: sangwa.simwaka@gmail.com </p>
+	<p class = contactinfo> Email: sangwasimwaka@gmail.com </p>
 	<p class = contactinfo> School Email: sas185@usask.ca </p>
 	<p class = contactinfo> Phone: + 1 (204) 899 7580 </p>
 </body>
